--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://ebe1997.github.io/19-User-Directory/"
 }
